--- a/project1/proj1.html
+++ b/project1/proj1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <img src="image1.jpg" alt="Error"> -->
-    <title>Harry Fitness</title>
+    <title>Arundhuti Fitness</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2&family=Gemunu+Libre:wght@200&family=Oswald:wght@200&display=swap"
         rel="stylesheet">
